# retailmind

./: .gitignore  Makefile  README.md  docker-compose.yml  railway.toml  render.yaml  schema.sql  start_retailmind.bat  vercel.json
.antigravity/: context.json
Demo_data/: demo_retail_data.xlsx  generate_retail_data.py
backend/: .env.example  Dockerfile  check_db.py  list_models.py  pyproject.toml  requirements.txt  reset_db.py  seed_demo.py  test_gemini.py
backend/app/: main.py
backend/app/api/: admin.py  advisor.py  analytics.py  auth.py  demo.py  deps.py  onboarding.py  retail.py  scan.py  users.py
backend/app/core/: config.py  db.py  limiter.py  redis.py  security.py  validation.py
backend/app/middleware/: security.py
backend/app/models/: db.py
backend/app/schemas/: auth.py  response.py  transaction.py
backend/app/security/: auth.py
backend/app/services/: demo.py  demo_store.py  gemini.py  llm.py  retail_intelligence.py  scanner.py
backend/migrations/: env.py
backend/migrations/versions/: baf0f2c715d3_add_rows_total_duplicates_skipped_to_.py  c3ce3f223289_initial_schema.py  dd8a2e7ceaae_add_anomaly_snapshot_to_audits.py
backend/retailmind_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: alter_tables.py  check_db.py  clear_demo.py  create_tables.py  qa_phase5.py  qa_test_upload.csv  reset_db.py  seed_demo_account.py  test_advisor_valid.py  test_audit.py  test_gemini.py  test_groq.py  test_login.py  test_ml_layer.py
docs/: AI-System.md  API.md  Architecture.md  Backend.md  Changelog.md  Coding_Rules.md  Contributing.md  Database.md  Deployment.md  EnvironmentSetup.md  Feature_Log.md  Frontend.md  Future_Roadmap.md  Pitch_Walkthrough.md  Project_Context.md  RETAILMIND_UPGRADE_PLAN.md  Release_Audit_Report.md  Roadmap.md  Security.md  Troubleshooting.md  implementation_plan.md  retailmind_analysis.md  tasks_todo.md  walkthrough.md
frontend/: .env.example  (+4 more)
(+55 files in other folders)
