[project]
name = "retailmind-backend"
version = "2.0.0"
description = "RetailMind — AI-Powered Retail Business Intelligence Backend"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",

    # Validation & Config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # Authentication
    "PyJWT[crypto]>=2.10",
    "passlib[argon2]>=1.7",
    "bcrypt>=4.2",
    "argon2-cffi>=23.1",
    "cryptography>=44.0",

    # File processing
    "python-multipart>=0.0.18",
    "pillow>=11.0",
    "openpyxl>=3.1",
    "pandas>=2.2",

    # AI / ML
    "google-generativeai>=0.8",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "numpy>=2.0",

    # Infrastructure
    "sentry-sdk[fastapi]>=2.0",
    "tenacity>=9.0",
    "slowapi>=0.1.9",
    "secure>=1.0",

    # Utilities
    "redis>=5.0.0",
    "python-dotenv>=1.0",
    "email-validator>=2.2",
    "httpx>=0.27",          # async HTTP client
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",          # async test client
    "factory-boy>=3.3",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "RUF"]
ignore = ["E501", "B008"]   # line-length handled by formatter; B008 = Depends() in function defaults

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
